--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ lazy_static = { version = "1", optional = true }
 log = "~0.4.8"
 lru_time_cache = "~0.11.0"
 mock-quic-p2p = { git = "https://github.com/maidsafe/qp2p", rev = "602dc620", optional = true }
-qp2p = { git = "https://github.com/maidsafe/qp2p", features = ["upnp"], branch = "master" }
+qp2p = { git = "https://github.com/lionel1704/quic-p2p", branch = "upnp-async" }
 rand = "~0.7.3"
 rand_core = "~0.5.1"
 rand_os = "~0.2.2"
