--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ rand_chacha = "~0.2.2"
 thiserror = "1.0.23"
 xor_name = "1.1.0"
 resource_proof = "0.8.0"
-sn_messaging = "~5.0.0"
+sn_messaging = { git = "https://github.com/lionel1704/sn_messaging", branch = "acc-at-dest" }
 sn_data_types = "~0.15.0"
 
   [dependencies.bls]
