--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ bytes = "1.0.1"
 futures = "~0.3.12"
 hex_fmt = "~0.3.0"
 itertools = "~0.9.0"
-qp2p = "~0.12.0"
+qp2p = { git  = "https://github.com/lionel1704/qp2p", branch = "igd-11" }
 rand = "~0.7.3"
 rand_chacha = "~0.2.2"
 resource_proof = "0.8.0"
